manifests/network-policies/postgres-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-allow
  namespace: mattermost-k3d
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mattermost
        - podSelector:
            matchLabels:
              app: postgres-backup
      ports:
        - protocol: TCP
          port: 5432
